fix(login): remove errant 'v' holdover from previous versioning information

--- a/templates/login.html
+++ b/templates/login.html
@@ -33,13 +33,13 @@
                 title="Show/Hide password">
             <span class="sr-only">Show</span><span aria-hidden="true">👁️</span></button>
     </div>
-    <small id="password-help" class="form-help">Never share it; sometimes even with yourself.</small>
+    <small id="password-help" class="form-help">Never share your password (sometimes not even with yourself).</small>
 
     <div class="text-center mt-1">
         <button type="submit" class="btn green">Login</button>
     </div>
 </form>
 
-<p class="version-number">v{{ app_version }}</p>
+<p class="version-number">{{ app_version }}</p>
 
 {% endblock %}
